[package]
name = "gnat"
version = "0.3.0"
authors = ["Alex Conley <imaconley1@gmail.com>"]
edition = "2021"
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.29.0"
eframe = { version = "0.29.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1.0.210", features = ["derive"] }

egui_plot = {version = "0.29.0", features = ["serde"] }
egui_tiles = "0.10.0"
egui_extras = {version = "0.29.0", features = ["syntect"] }
epaint = "0.29.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"

# performant will make the compile times slower but should make the histogrammer faster
polars = { version = "0.41.0", features = ["lazy", "parquet", "performant"] }
polars-lazy = { version = "0.41.0", features = ["hist"] }

rfd = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.31"
serde_json = "1.0.128"
geo = "0.28.0"
fnv = "1.0.7"
varpro = "0.10.0"
nalgebra = "0.33.0"
compute = "0.2.3"
indicatif = "0.17"
find_peaks = "0.1.5"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70" # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]